--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "firebase": "^7.14.2",
+    "luxon": "^1.23.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
